--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -19,7 +19,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: select xcode
-        run: sudo xcode-select -s /Applications/Xcode.app
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: "latest"
+
+      - name: verify xcode
+        run: xcodebuild -version
 
       - name: install ldid
         run: |
