--- a/Config/Info.plist
+++ b/Config/Info.plist
@@ -37,6 +37,12 @@
 	<string>JESSI needs access to your local network so other devices on your Wi-Fi can connect to Minecraft servers ran by the app.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>fetch</string>
+		<string>processing</string>
+	</array>
 	<key>UIFileSharingEnabled</key>
 	<true/>
 	<key>UILaunchScreen</key>
